--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: ruby
 rvm:
   - "2.1.5"
-before_script:
-  - cp config/database.travis.yml config/database.yml
+#before_script:
+  #- cp config/database.travis.yml config/database.yml
 
 script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - bundle exec rake db:test:prepare
+  #- RAILS_ENV=test bundle exec rake db:migrate --trace
+  #- bundle exec rake db:test:prepare
   - bundle exec rake spec --rakefile .rspec-travis
 
 branches:
